# AFg6K7h4fhy2-Template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  README.md  _typos.toml  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: general_issue.md
.github/actions/pre-commit/: action.yaml
assets/misc/: design-decisions.md  dev-notes.md  feature-list.md  historical-edits.md  integration-notes.md  package-notes.txt  project-roadmap.md  style-guide.md  user-feedback.md
