[tool.poetry]
name = "baseline-template-change"
version = "0.0.1"
description = "The author's personal template for repository creation."
authors = ["AFg6K7h4fhy2 <127630341+AFg6K7h4fhy2@users.noreply.github.com>"]
license = "Apache-2.0"
package-mode = false
readme = "README.md"
repository = "https://github.com/AFg6K7h4fhy2/AFg6K7h4fhy2-Template"
keywords = ["design-patterns", "template", "standards"]

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.0"

[tool.poetry.urls]
"Repository Issues" = "https://github.com/AFg6K7h4fhy2/AFg6K7h4fhy2-Template/issues"
"Author Homepage" = "https://github.com/AFg6K7h4fhy2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
